--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
       <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="11" />
 
 
-    <application android:icon="@drawable/icon" android:name="NgnApplication" android:label="@string/app_name" android:hardwareAccelerated="true">
+    <application android:icon="@drawable/icon" android:name="NgnApplication" android:label="@string/app_name" android:hardwareAccelerated="false">
 	<string name="doubango_revision">1033</string>
 	<service android:name="NgnNativeService"/>
 	
